# portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.dev.yml  docker-compose.yaml  fly.qdrant.toml  fly.toml  main.py  pyproject.toml
api/: endpoints.py
frontend/: Dockerfile  Home.py  config.py  utils.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_Ask.py  2_Upload.py
prompts/: ask_profile_prompt.py
qdrant-deploy/: fly.toml
scripts/: index_profile.py
services/: document_loader.py  embedding.py  query_engine.py  vectorstore.py
tests/: test_document_louder.py  test_embedding.py
