[tool.poetry]
name = "ai-portfolio"
version = "0.1.0"
description = "Interactive AI portfolio using FastAPI, RAG, Qdrant, and Ollama"
authors = ["Mb"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.110.0"
uvicorn = "0.29.0"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
qdrant-client = "1.8.0"
langchain = "0.1.16"
unstructured = { version = "0.12.6", python = ">=3.9,<3.12" }
pdfminer-six = "20231228"
python-multipart = "0.0.9"
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
