[tool.poetry]
name = "ai-portfolio"
version = "0.1.0"
description = "Interactive AI portfolio using FastAPI, RAG, Qdrant, and Ollama"
authors = ["Mb"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.110.0"
uvicorn = "0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.4.0"
qdrant-client = "1.8.0"
unstructured = {extras = ["all-docs"], version = "^0.17.2"}
pdfminer-six = "20231228"
python-multipart = "0.0.9"
httpx = "0.27.0"
pdf2image = "^1.17.0"
pillow-heif = "^0.22.0"
opencv-python = "^4.11.0.86"
pytesseract = "^0.3.13"
pypdf = "^5.5.0"
pikepdf = "^9.7.0"
streamlit = "^1.45.1"
requests = "^2.32.3"
openai = "^1.82.0"
langchain-openai = "^0.3.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.4.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

